--- a/web_server/src/main/resources/static/index.html
+++ b/web_server/src/main/resources/static/index.html
@@ -1,4 +1,4 @@
-﻿<html xmlns="http://www.w3.org/1999/xhtml" content="text/html;">
+﻿<html xmlns="http://www.w3.org/1999/xhtml" content="text/html; charset=utf-8">
 <head>
     <title>Index</title>
 </head>
